# findindi

./: .gitignore  LICENSE  buildclang.sh  compile.sh  configurebuild.sh  debug.sh  enter.sh  gdb-launch.txt  gdb-listen.sh  gdb-startup.gdb  gdb-test.sh  include_spec.sh  lldb-listen.sh  lldb-local.sh  run.sh  sharedfuncs.sh  ssh_compile.sh  ubuntu-16.04-clang-install.sh  volumes.sh
docker/: Dockerfile
scripts/: genbuild.sh
src/: CMakeLists.txt
src/examples/: example1.c
src/findindi/: CMakeLists.txt  findif.cpp  findindicall.cpp
workspace/: genbuild.sh
